Java cleanups